<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="splash">Mazoku</string>
    <string name="menu_settings">Settings</string>
    <string name="timerVal">00:00:00</string>
    <string name="pauseButtonLabel">Pause</string>
    <string name="startButtonLabel">Start</string>
    <string name="nextGameLabel">Next</string>
    <string name="finished_text">Level cleared</string>
    <string name="finished_button">Cool</string>
    <string name="dummy_content">MAZOKU</string>
    <string name="dummy_button">Play</string>
    <string name="title_activity_intro_screen">Play Mazoku</string>
    <string name="title_activity_splash">Splash</string>
</resources>
